# OpenEnv-LogTriage-Team-Shanmukha

./: Dockerfile  LICENSE  README.md  inference.py  log_env.py  openenv.yaml  pyproject.toml
server/: app.py
